--- a/Omnifood Project/Optimized/css/style.css
+++ b/Omnifood Project/Optimized/css/style.css
@@ -1,5 +1,4 @@
 
-
 /**************************/
 /* HEADER */
 /**************************/
@@ -145,6 +144,23 @@
   color: #cf711f;
   font-weight: 700;
 }
+
+.sticky .header{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero{
+  margin-top: 9.6rem;
+}
+
 
 /**************************/
 /* FEATURED IN SECTION */
