--- a/LAYOUTS/Challenge 3/index.html
+++ b/LAYOUTS/Challenge 3/index.html
@@ -1,8 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Document</title>
+</head>
+<body>
+  
 <article class="product">
   <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
   <img
-    src="https://i.imgur.com/ZrTU3VK.jpeg"
+    src="css/style.css"
     alt="Chuck Taylor All Star Shoe"
     height="250"
     width="250"
@@ -41,3 +51,6 @@
   </div>
   <button class="add-cart">Add to cart</button>
 </article>
+
+</body>
+</html>
